WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96219
AX: Update Windows port accessible role mappings to fix some tests
https://bugs.webkit.org/show_bug.cgi?id=96219
Summary
AX: Update Windows port accessible role mappings to fix some tests
Dominic Mazzoni
Reported
2012-09-09 14:58:41 PDT
Tests currently failing due to
https://bugs.webkit.org/show_bug.cgi?id=94870
: accessibility/adjacent-continuations-cause-assertion-failure.html accessibility/deleting-iframe-destroys-axcache.html accessibility/div-within-anchors-causes-crash.html
Attachments
Patch
(2.45 KB, patch)
2012-09-09 15:04 PDT
,
Dominic Mazzoni
no flags
Details
Formatted Diff
Diff
Patch
(2.40 KB, patch)
2012-09-09 19:02 PDT
,
Dominic Mazzoni
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Dominic Mazzoni
Comment 1
2012-09-09 15:00:58 PDT
I'm uploading a patch that should fix the tests. While I was at it, I tried to map a few more accessible roles on Windows - the ones that I'm reasonably confident about based on the Chromium source code. Roger, could you patch this in and see if it fixes these three tests and doesn't break anything else on Windows?
Dominic Mazzoni
Comment 2
2012-09-09 15:04:30 PDT
Created
attachment 163015
[details]
Patch
Build Bot
Comment 3
2012-09-09 15:28:48 PDT
Comment on
attachment 163015
[details]
Patch
Attachment 163015
[details]
did not pass win-ews (win): Output:
http://queues.webkit.org/results/13805300
Dominic Mazzoni
Comment 4
2012-09-09 19:02:06 PDT
Created
attachment 163024
[details]
Patch
WebKit Review Bot
Comment 5
2012-09-10 09:16:39 PDT
Comment on
attachment 163024
[details]
Patch Clearing flags on attachment: 163024 Committed
r128066
: <
http://trac.webkit.org/changeset/128066
>
WebKit Review Bot
Comment 6
2012-09-10 09:16:43 PDT
All reviewed patches have been landed. Closing bug.
Roger Fong
Comment 7
2012-09-10 14:37:07 PDT
Hello, sorry I didn't check this earlier. But the patch has landed, the tests aren't failing and everything still builds, so I guess it's good :)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug