AX: Update Windows port accessible role mappings to fix some tests https://bugs.webkit.org/show_bug.cgi?id=96219

Reviewed by Chris Fleizach.

Update a bunch of accessible role mappings to fix tests and improve win
accessibility.

* AccessibleBase.cpp:
(MSAARole):


Canonical link: https://commits.webkit.org/114161@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128066 268f45cc-cd09-0410-ab3c-d52691b4dbfc