Source/WebKit/win/AccessibleBase.cpp
@@ -669,6 +669,36 @@ static long MSAARole(AccessibilityRole role)
             return ROLE_SYSTEM_LISTITEM;
         case WebCore::PopUpButtonRole:
             return ROLE_SYSTEM_COMBOBOX;
+        case WebCore::DivRole:
+        case WebCore::FormRole:
+        case WebCore::LabelRole:
+        case WebCore::ParagraphRole:
+            return ROLE_SYSTEM_GROUPING;
+        case WebCore::HorizontalRuleRole:
+            return ROLE_SYSTEM_SEPARATOR;
+        case WebCore::ApplicationAlertRole:
+            return ROLE_SYSTEM_ALERT;
+        case WebCore::ComboBoxRole:
+            return ROLE_SYSTEM_COMBOBOX;
+        case WebCore::SpinButtonRole:
+            return ROLE_SYSTEM_SPINBUTTON;
+        case WebCore::SpinButtonPartRole:
+            return ROLE_SYSTEM_PUSHBUTTON;
+        case WebCore::ToggleButtonRole:
+            return ROLE_SYSTEM_PUSHBUTTON;
+        case WebCore::ToolbarRole:
+            return ROLE_SYSTEM_TOOLBAR;
+        case WebCore::UserInterfaceTooltipRole:
+            return ROLE_SYSTEM_TOOLTIP;
+        case WebCore::TreeRole:
+        case WebCore::TreeGridRole:
+            return ROLE_SYSTEM_OUTLINE;
+        case WebCore::TreeItemRole:
+            return ROLE_SYSTEM_OUTLINEITEM;
+        case WebCore::TabListRole:
+            return ROLE_SYSTEM_PAGETABLIST;
+        case WebCore::TabPanelRole:
+            return ROLE_SYSTEM_PROPERTYPAGE;
         default:
             // This is the default role for MSAA.
             return ROLE_SYSTEM_CLIENT;
